# H-Discord-Tool

./: Cargo.toml  README.md  readme.md  requirements.txt
.github/workflows/: black.yml  pylint.yml
h_tool/: __init__.py  __main__.py
h_tool/core/: get_info.py
h_tool/helpers/: logs.py  menu.py  utils.py
src/: main.rs
src/features/: get_info.rs  mod.rs  utils.rs
