[package]
name = "h_discord_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hyper = { version = "0.14.25", features = ["full"] }
reqwest = { version = "0.11.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["default_no_backend"]

default_no_backend = ["chrono"]

[dependencies.chrono]
default-features = false
features = ["clock", "serde"]
optional = true
version = "0.4.10"
